--- a/style.css
+++ b/style.css
@@ -75,12 +75,13 @@ span{
 .left img{
     width:300px;
     height:500px;
-    padding-top: 40px;
+    padding-top: 35px;
     border: 2px solid black;
 }
 .left img{
     padding:33px;
     padding-left:40px;
+    margin-top:10px;
  
 }
 .right{
