--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ span{
     height:500px;
     padding-top: 35px;
     border: 2px solid black;
+    margin-left:20px;
 }
 .left img{
     padding:33px;
